# TAURIv1-release-bios

./: .gitignore  README.md  angular.json  build.bat  package.json
src/: index.html  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmds.rs  copy_libs.rs  mail_addrs.rs  main.rs  open_outlook.rs  str_libs.rs
src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts
src/app/upload/: upload.component.css  upload.component.html  upload.component.ts
src/app/user-setting/: user-setting.component.css  user-setting.component.html  user-setting.component.spec.ts  user-setting.component.ts
