[package]
name = "release-binary"
version = "0.0.0"
description = "A Tauri App"
authors = ["Pinsheng Juan <pinshengjuan@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-read-dir", "fs-create-dir", "fs-exists", "path-all", "fs-read-file", "fs-write-file", "window-close", "dialog-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = {version = "0.4", feature = ["serde"] }
regex = "1.10.3"
zip = "0.6.6"
anyhow = "1.0.81"
directories = "5.0.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dependencies.windows]
version = "0.54.0"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_DataExchange",
    "Win32_System_Variant",
    "Win32_System_Com", 
    "Win32_System_Ole",
]
